--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Both Sella, Bajári Gergő</title>
+    <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Cím</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Főoldal</a>
+            </li>
+            <li>
+                <a href="#">Másik</a>
+            </li>
+            <li>
+                <a href="#">Harmadik</a>
+            </li>
+            <li>
+                <a href="#">Negyedik</a>
+            </li>
+        </ul>
+    </nav>
+    <article>
+        <p>Article</p>
+    </article>
+    <footer>
+        <p>Both Orsolya - Bajári Gergő</p>
+    </footer>
 </body>
 </html>
