--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </li>
         </ul>
     </nav>
-
+    <img src="olimpia.jpg" alt="Olimpia">
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
