--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Both Orsolya, Bajári Gergő">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Both Sella, Bajári Gergő</title>
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
     <header>
-        <h1>Olimpiai Sportágak</h1>
+        <h1>Cím</h1>
     </header>
     <nav>
         <ul>
             <li>
-                <a href="index.html">Főoldal</a>
+                <a href="#">Főoldal</a>
             </li>
             <li>
-                <a href="atletika.html">Atlétika</a>
+                <a href="#">Másik</a>
             </li>
             <li>
-                <a href="kajak.html">Kajak</a>
+                <a href="#">Harmadik</a>
             </li>
             <li>
-                <a href="vivas.html">Vívás</a>
+                <a href="#">Negyedik</a>
             </li>
         </ul>
     </nav>
-
+    <article>
+        <p>Article</p>
+    </article>
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
