--- a/atletika.html
+++ b/atletika.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Both Orsolya, Bajári Gergő">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Both Sella, Bajári Gergő</title>
     <link rel="stylesheet" href="stilus.css">
