--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
                 <a href="#">Főoldal</a>
             </li>
             <li>
-                <a href="#">Másik</a>
+                <a href="atletika.html">Atlétika</a>
             </li>
             <li>
-                <a href="#">Harmadik</a>
+                <a href="kajak.html">Kajak</a>
             </li>
             <li>
-                <a href="#">Negyedik</a>
+                <a href="vivas.html">Vívás</a>
             </li>
-        </ul>
     </nav>
 
     <article>
