--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Főoldal</a>
+                <a href="index.html">Főoldal</a>
             </li>
             <li>
-                <a href="#">Másik</a>
+                <a href="atletika.html">Atlétika</a>
             </li>
             <li>
-                <a href="#">Harmadik</a>
+                <a href="kajak.html">Kajak</a>
             </li>
             <li>
-                <a href="#">Negyedik</a>
+                <a href="vivas.html"> Vívás</a>
             </li>
         </ul>
     </nav>
 
     <article>
-        <p>Article</p>
+        Olimpiai sportágnak nevezzük a nyári és a téli olimpiai játékok versenyszámait. A jelenlegi olimpiai program 35 sportot tartalmaz 53 szakággal, magyarul általában erre az utóbbira használjuk a sportág kifejezést. A nyári olimpiai játékok 28 sportot és 38 szakágat tartalmaz körülbelül 300 versenyszámmal, a téli olimpiai játékok pedig 7 sportot 15 szakággal és körülbelül 80 versenyszámmal. A versenyszámok száma és típusa olimpiáról olimpiára változhat. Minden olimpiai sportot egy-egy nemzetközi szövetség képvisel
     </article>
 
     <img src="olimpia.jpg" alt="Olimpia">
