--- a/atletika.html
+++ b/atletika.html
@@ -29,6 +29,9 @@
             </li>
         </ul>
     </nav>
+    <article>
+        Atlétika az ókori olimpiákon is alapszáma volt a vetélkedéseknek, a „sportok királynője” néven tisztelik a futó, ugró, dobó versenyeket. Az újkori olimpiákon is biztos pont a játékok műsorában. Az 1896-os athéni olimpiától kezdve mindig megrendezik egyre több számmal, 1928-as amszterdami olimpián rendeztek első alkalommal női atlétikai viadalokat.
+    </article>
 
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
