--- a/kajak.html
+++ b/kajak.html
@@ -29,6 +29,11 @@
             </li>
         </ul>
     </nav>
+    <article>
+        A kajak-kenu 1936-ban került a nyári olimpiai játékok műsorába. A kezdeti 10 000 méteres számok hamar kimaradtak, rövidebb távok váltották fel őket. 1948 óta női számok is vannak és 1972-ben bemutatkozott a vadvízi szakág is, mely véglegesen 1992-ben került be a programba.
+
+Kétfajta hajót használnak ebben a sportban: egy- illetve kétfős kenukat (angolul: canoe), és egy-, két- illetve négyfős kajakokat (angolul: kayak). A hajó angol nevéből és a benne ülők/térdelők létszámából erednek a versenyszámok elnevezései. Például a "C-1" a kenu egyes versenyszám, míg a "K-2" a kajak kettes. A síkvízi versenyszámokat jelenleg 200, 500 és 1000 méteres távokon rendezik meg (a női versenyszámok 200 és 500 méteresek).
+    </article>
 
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
