--- a/vivas.html
+++ b/vivas.html
@@ -29,6 +29,11 @@
             </li>
         </ul>
     </nav>
+    <article>
+        A vívás technikai jellegű küzdősport. A küzdőtéren (páston) két versenyző vív egymással mérkőzést (asszót). A mérkőzés célja, hogy a versenyzők közül az egyik minél hamarabb elérje a megadott találatszámot (5, 10, 15 találat, tus) vagy több találatot érjen el az adott idő lejártáig, mint ellenfele, így megnyerve az asszót.
+
+        Amikor két vívó összeméri erejét, mindkettőnek az a célja, hogy az ellenfél érvényes testfelületén szúrással, a kardvívásnál szúrással vagy vágással találatot érjen el. Párbajtőrnél az egész testfelületen érvényes szúrni. Ugyanakkor arra is törekednek, hogy az ellenfél ne érjen el találatot. Vitás esetekben a fennálló szabályok alapján egy- vagy négytagú ítélkező bizottság (zsűri) dönti el, hogy ki kapja az érvényes találatot. A zsűri érdek nélküli, semleges tagokból áll, és kötelessége, hogy a mérkőző feleknek egyenlő esélyeket, feltételeket biztosítson.
+    </article>
 
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
