--- a/atletika.html
+++ b/atletika.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
+    <main>
     <header>
         <h1>Olimpiai Sportágak</h1>
     </header>
@@ -36,5 +37,6 @@
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
+</main>
 </body>
 </html>
