--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
+    <main>
     <header>
         <h1>Olimpiai Sportágak</h1>
     </header>
@@ -35,8 +36,9 @@
 
     <img src="olimpia.jpg" alt="Olimpia">
 
-    <footer>
-        <p>Both Orsolya - Bajári Gergő</p>
-    </footer>
+        <footer>
+            <p>Both Orsolya - Bajári Gergő</p>
+        </footer>
+    </main>
 </body>
 </html>
