--- a/kajak.html
+++ b/kajak.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
+<main>
     <header>
         <h1>Olimpiai Sportágak</h1>
     </header>
@@ -38,5 +39,6 @@ Kétfajta hajót használnak ebben a sportban: egy- illetve kétfős kenukat (an
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
+</main>
 </body>
 </html>
