--- a/vivas.html
+++ b/vivas.html
@@ -9,7 +9,8 @@
     <title>Both Sella, Bajári Gergő</title>
     <link rel="stylesheet" href="stilus.css">
 </head>
-<body>
+<body id = "vivas">
+<main>
     <header>
         <h1>Olimpiai Sportágak</h1>
     </header>
@@ -38,5 +39,6 @@
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
+</main>
 </body>
 </html>
