--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
         A Nemzetközi Olimpiai Bizottság (NOB) 1894-ben jött létre a francia Pierre de Frédy, Baron de Coubertin kezdeményezésére. A NOB lett az „olimpiai mozgalom” szíve, az egymás után alakuló nemzeti olimpiai szervezetek összefogója. Ahogy az olimpiai mozgalom nőtt, kialakult a szerkezete, összetettsége. Az olimpia hármas jelszava: Citius Altius Fortius (Gyorsabban Magasabbra Erősebben) lett. Az egymást követő olimpiai játékokon folyamatosan emelkedett a részt vevő nemzetek száma, mígnem a létező országok nagy része már képviselte magát az eseményen. A híradástechnika fejlődése nyomán a közönség is egyre nagyobb érdeklődéssel fordult a játékok felé, így vált az olimpia a legnézettebb televíziós sporteseménnyé, de a helyszíneken is mindig tömött lelátók előtt zajlanak a versenyek. Az olimpiai mozgalom fejlődése egy idő után már az esemény megrendezésében okozott gondokat, ezért a NOB a megrendezésre kerülő sportágak számát és a részt vevő sportolók létszámát is korlátozni kénytelen, ez utóbbi miatt vezették be a kvalifikációs rendszert. A 2008-as nyári, a pekingi játékokon összesen 28 sportág 34 szakágának 302 versenyszáma szerepelt, míg a 2010-es téli, a vancouveri olimpián 7 sportág 15 szakágának 86 versenyszámát bonyolították le
     </article>
 
+    <table>
+        <tr>
+          <th>Név</th>
+          <th>Év</th>
+          <th>Sportág</th>
+        </tr>
+        <tr>
+          <td>Szabó Bence</td>
+          <td>1992, Barcelona</td>
+          <td>Vívás</td>
+        </tr>
+        <tr>
+          <td>Parti János</td>
+          <td>1960, Róma</td>
+          <td>Kajak</td>
+        </tr>
+        <tr>
+            <td>Csák Ibolya</td>
+            <td>1936, Berlin</td>
+            <td>Atlétika</td>
+        </tr>
+      </table>
+
     <footer>
         <p>Both Orsolya - Bajári Gergő</p>
     </footer>
