--- a/vivas.html
+++ b/vivas.html
@@ -35,7 +35,15 @@
 
             Amikor két vívó összeméri erejét, mindkettőnek az a célja, hogy az ellenfél érvényes testfelületén szúrással, a kardvívásnál szúrással vagy vágással találatot érjen el. Párbajtőrnél az egész testfelületen érvényes szúrni. Ugyanakkor arra is törekednek, hogy az ellenfél ne érjen el találatot. Vitás esetekben a fennálló szabályok alapján egy- vagy négytagú ítélkező bizottság (zsűri) dönti el, hogy ki kapja az érvényes találatot. A zsűri érdek nélküli, semleges tagokból áll, és kötelessége, hogy a mérkőző feleknek egyenlő esélyeket, feltételeket biztosítson.
         </article>
-
+        <aside>
+            1. Plasztron
+            2. Kesztyű 
+            3. Vezeték
+            4. Fegyver
+            5. Vívónadrág
+            6. Fejvéd
+            7. Hónaljvéd    
+        </aside>
         <footer>
             <p>Both Orsolya - Bajári Gergő</p>
         </footer>
