--- a/vivas.html
+++ b/vivas.html
@@ -36,13 +36,29 @@
             Amikor két vívó összeméri erejét, mindkettőnek az a célja, hogy az ellenfél érvényes testfelületén szúrással, a kardvívásnál szúrással vagy vágással találatot érjen el. Párbajtőrnél az egész testfelületen érvényes szúrni. Ugyanakkor arra is törekednek, hogy az ellenfél ne érjen el találatot. Vitás esetekben a fennálló szabályok alapján egy- vagy négytagú ítélkező bizottság (zsűri) dönti el, hogy ki kapja az érvényes találatot. A zsűri érdek nélküli, semleges tagokból áll, és kötelessége, hogy a mérkőző feleknek egyenlő esélyeket, feltételeket biztosítson.
         </article>
         <aside>
-            1. Plasztron
-            2. Kesztyű 
-            3. Vezeték
-            4. Fegyver
-            5. Vívónadrág
-            6. Fejvéd
-            7. Hónaljvéd    
+        <table>
+        <tr>
+            <td>Plasztron</td>
+        </tr>
+        <tr>
+            <td>Kesztyű</td>
+        </tr>
+        <tr>
+            <td>Vezeték</td>
+        </tr>
+        <tr>
+            <td>Fegyver</td>
+        </tr>
+        <tr>
+            <td>Vívónadrág</td>
+        </tr>
+        <tr>
+            <td>Fejvédő</td>
+        </tr>
+        <tr>
+            <td>Hónaljvédő</td>
+        </tr>
+        </table>  
         </aside>
         <footer>
             <p>Both Orsolya - Bajári Gergő</p>
