--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
         </header>
         <nav>
             <ul>
-                <li>
-                    <a href="index.html">Főoldal</a>
-                </li>
-                <li>
-                    <a href="atletika.html">Atlétika</a>
-                </li>
-                <li>
-                    <a href="kajak.html">Kajak</a>
-                </li>
-                <li>
-                    <a href="vivas.html"> Vívás</a>
-                </li>
+                <li><a href="index.html">Főoldal</a></li>
+                <li><a href="atletika.html">Atlétika</a></li>
+                <li><a href="kajak.html">Kajak</a></li>
+                <li><a href="vivas.html"> Vívás</a></li>
         </nav>
 
         <article>
