--- a/atletika.html
+++ b/atletika.html
@@ -16,19 +16,10 @@
         </header>
         <nav>
             <ul>
-                <li>
-                    <a href="index.html">Főoldal</a>
-                </li>
-                <li>
-                    <a href="atletika.html">Atlétika</a>
-                </li>
-                <li>
-                    <a href="kajak.html">Kajak</a>
-                </li>
-                <li>
-                    <a href="vivas.html">Vívás</a>
-                </li>
-            </ul>
+                <li><a href="index.html">Főoldal</a></li>
+                <li><a href="atletika.html">Atlétika</a></li>
+                <li><a href="kajak.html">Kajak</a></li>
+                <li><a href="vivas.html"> Vívás</a></li>
         </nav>
         <article>
             Atlétika az ókori olimpiákon is alapszáma volt a vetélkedéseknek, a „sportok királynője” néven tisztelik a futó, ugró, dobó versenyeket. Az újkori olimpiákon is biztos pont a játékok műsorában. Az 1896-os athéni olimpiától kezdve mindig megrendezik egyre több számmal, 1928-as amszterdami olimpián rendeztek első alkalommal női atlétikai viadalokat.
