--- a/kajak.html
+++ b/kajak.html
@@ -16,19 +16,10 @@
         </header>
         <nav>
             <ul>
-                <li>
-                    <a href="index.html">Főoldal</a>
-                </li>
-                <li>
-                    <a href="atletika.html">Atlétika</a>
-                </li>
-                <li>
-                    <a href="kajak.html">Kajak</a>
-                </li>
-                <li>
-                    <a href="vivas.html">Vívás</a>
-                </li>
-            </ul>
+                <li><a href="index.html">Főoldal</a></li>
+                <li><a href="atletika.html">Atlétika</a></li>
+                <li><a href="kajak.html">Kajak</a></li>
+                <li><a href="vivas.html"> Vívás</a></li>
         </nav>
         <article>
             A kajak-kenu 1936-ban került a nyári olimpiai játékok műsorába. A kezdeti 10 000 méteres számok hamar kimaradtak, rövidebb távok váltották fel őket. 1948 óta női számok is vannak és 1972-ben bemutatkozott a vadvízi szakág is, mely véglegesen 1992-ben került be a programba.
