--- a/atletika.html
+++ b/atletika.html
@@ -23,6 +23,26 @@
         </nav>
         <article>
             Atlétika az ókori olimpiákon is alapszáma volt a vetélkedéseknek, a „sportok királynője” néven tisztelik a futó, ugró, dobó versenyeket. Az újkori olimpiákon is biztos pont a játékok műsorában. Az 1896-os athéni olimpiától kezdve mindig megrendezik egyre több számmal, 1928-as amszterdami olimpián rendeztek első alkalommal női atlétikai viadalokat.
+            <img src="atletika.jpg" alt="atletika"><br><br>
+            Az alábbi versenyszámok az IAAF (és a tagszervezetek) legrangosabb viadalainak, azaz a szabadtéri világversenyeknek (olimpia, világbajnokság, kontinensbajnokságok) a versenyszámai. Egyéb versenyszámok ezeken a világversenyeken nem, de más atlétikai versenyek műsorán gyakran szerepelnek.
+            <br><br>Futószámok
+            <ul>
+                <li>Síkfutás: 100 m, 200 m, 400 m, 800 m, 1500 m, 3000 m, 5000 m, 10000 m, maraton, 4x100 m váltó, 4x400 m váltó</li>
+                <li>Gát-, akadályfutás: 100/110 m gát, 400 m gát,3000 m akadály</li>
+            </ul>
+            Gyaloglószámok
+            <ul>
+                <li>Női: 20 km</li>
+                <li>Férfi: 20 km, 50 km</li>
+            </ul>
+            Ugrószámok
+            <ul>
+                <li>távolugrás, hármasugrás, magasugrás, rúdugrás</li>
+            </ul>
+            Dobószámok
+            <ul>
+                <li>gerelyhajítás, súlylökés, diszkoszvetés, kalapácsvetés</li>
+            </ul>
         </article>
 
         <footer>
