--- a/kajak.html
+++ b/kajak.html
@@ -25,6 +25,9 @@
             A kajak-kenu 1936-ban került a nyári olimpiai játékok műsorába. A kezdeti 10 000 méteres számok hamar kimaradtak, rövidebb távok váltották fel őket. 1948 óta női számok is vannak és 1972-ben bemutatkozott a vadvízi szakág is, mely véglegesen 1992-ben került be a programba.
 
             Kétfajta hajót használnak ebben a sportban: egy- illetve kétfős kenukat (angolul: canoe), és egy-, két- illetve négyfős kajakokat (angolul: kayak). A hajó angol nevéből és a benne ülők/térdelők létszámából erednek a versenyszámok elnevezései. Például a "C-1" a kenu egyes versenyszám, míg a "K-2" a kajak kettes. A síkvízi versenyszámokat jelenleg 200, 500 és 1000 méteres távokon rendezik meg (a női versenyszámok 200 és 500 méteresek).
+            <img src="kajak.jpg" alt="kajak"><br>
+            A kajak egy kis méretű, keskeny hajótesttel rendelkező, emberi erővel hajtott hajó, amelynek hagyományosan zárt fedélzete (deck) és egy vagy több beülője van. Minden beülőben egy kajakos evez egy kéttollú evezővel. A beülőket esetenként hullámköténnyel fedik, hogy megóvják a kajakost a beázástól, vagy versenyhelyzetben az aerodinamikát javítsák. A hullámkötény teszi lehetővé azt is, hogy egy borulás esetén a kajakos vissza tudjon fordulni az eredeti állapotba, hiszen a hullámkötény miatt nem megy tele a hajótest vízzel és a kajakozó nem kerül ki a hajóból. A kajak szó a grönlandi qajaq szóból ered, jelentése azonos a magyarral.
+            <br><br> Bizonyos kajaktípusok eltérnek a hagyományos kialakítású kajakoktól. Az úgy nevezett sit-on-top, vagy más néven ráülős kajakoknál a beülő rész helyett a kajakos a hajótestben kialakított mélyedésben foglal helyet. Egyes kajaktípusokon megtalálható a kormánylapát is, amely az iránytartást segíti.
         </article>
 
         <footer>
