--- a/vivas.html
+++ b/vivas.html
@@ -32,29 +32,13 @@
             <br><br>Kardvívásban: Mindkét csapat 3-3 vívója küzd meg egymással, összesen 9 mérkőzésben (mindenki vív az ellenfél csapat összes tagjával). Az első csörte 5 tusig tart (pl.: 4-5), majd mindkét csapat következő 1-1 tagja átveszi a stafétát, és folytatják a mérkőzést tíz tusig (pl.: 7-10). Majd újabb csere következik, addig folytatják a vívást, míg egyikük el nem éri a 15 találatot (pl.: 15-13). A találkozónak akkor van vége, ha már mindenki fölmérte az erejét az ellenfél csapat összes tagjával. Vagyis akkor, ha valamelyik csapat elérte a 45 találatot. Mindkét csapatnak lehetősége van 1-1 cserére.
         </article>
         <aside>
-            <table id="vivas">
-                <tr>
-                    <td>Plasztron</td>
-                </tr>
-                <tr>
-                    <td>Kesztyű</td>
-                </tr>
-                <tr>
-                    <td>Vezeték</td>
-                </tr>
-                <tr>
-                    <td>Fegyver</td>
-                </tr>
-                <tr>
-                    <td>Vívónadrág</td>
-                </tr>
-                <tr>
-                    <td>Fejvédő</td>
-                </tr>
-                <tr>
-                    <td>Hónaljvédő</td>
-                </tr>
-            </table>  
+                Plasztron<br><img src="plasztron.jpg" alt="plasztron"><br>
+                Kesztyű<br><img src="kesztyu.jpg" alt="Kesztyű"><br>
+                Vezeték<br><img src="vezetek.jpg" alt="vezetek"><br>
+                Fegyver<br><img src="fegyver.jpg" alt="fegyver"><br>
+                Vívónadrág<br><img src="nadrag.avif" alt="nadrag"><br>
+                Fejvédő<br><img src="fejvedo.jpg" alt="fejvedo"><br>
+                Hónaljvédő<br><img src="honaljvedo.jpg" alt="honaljvedo">  
         </aside>
         <footer>
             <p>Both Orsolya - Bajári Gergő</p>
